Slightly enlarge video scale to prevent visible outline in Safari

--- a/src/scss/components/work/_single-image.scss
+++ b/src/scss/components/work/_single-image.scss
@@ -7,6 +7,8 @@
 
         video {
             @include apply-utility('box', 'block');
+            transform: scale(1.01);
+            transform-origin: center;
         }
 
         &:not(.full-height) {
